# Backend-Master-Challenge

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
adapters/src/: __init__.py
adapters/src/repositories/: __init__.py
adapters/src/repositories/config/: __init__.py  sql.py
adapters/src/repositories/memory/: __init__.py  memory_product_repository.py
adapters/src/repositories/sql/: __init__.py  session_manager.py  sql_product_repository.py
api/src/: create_app.py
api/src/dtos/: __init__.py  product.py
api/src/routes/: __init__.py  health_check_routes.py  product_routes.py
api/tests/api/: conftest.py  health_check_api_test.py  product_api_test.py
app/src/: __init__.py
app/src/core/: __init__.py
app/src/core/enums/: __init__.py  _product_statuses.py
app/src/core/models/: __init__.py  _product.py
app/src/exceptions/: __init__.py
app/src/exceptions/business/: __init__.py  base.py  product.py
app/src/exceptions/repository/: __init__.py  base.py  product.py
app/src/factories/: __init__.py  _use_cases.py
app/src/repositories/: __init__.py  product_repository.py
app/src/use_cases/: __init__.py  _get_products_case.py  _requests.py  _responses.py
factories/: __init__.py
factories/config/: __init__.py  utils.py
factories/config/repositories/: __init__.py  base.py  catalog.py
factories/repositories/: __init__.py  product.py
factories/use_cases/: __init__.py  product.py
infrastructure/docker/: docker-compose.dev.yml
(+27 files in other folders)
